--- a/99 nights in a dark forest style.css
+++ b/99 nights in a dark forest style.css
@@ -28,3 +28,36 @@ body {
     color: #ffdd00;
     font-weight: bold;
 }
+
+#cutscene {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.85);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+    font-size: 24px;
+    text-align: center;
+    display: none;
+}
+
+#groupPanel {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background: rgba(0,0,0,0.6);
+    padding: 10px;
+    border-radius: 5px;
+}
+#groupPanel input {
+    padding: 5px;
+    margin-right: 5px;
+}
+#groupPanel button {
+    padding: 5px 10px;
+}
